--- a/package.json
+++ b/package.json
@@ -1,1 +1,16 @@
-
+{
+  "name": "kickstarter-tracker",
+  "version": "1.0.0",
+  "description": "Daily tracker for Kickstarter follower counts",
+  "main": "scraper.js",
+  "scripts": {
+    "start": "node scraper.js",
+    "scrape": "node scraper.js"
+  },
+  "dependencies": {
+    "puppeteer": "^21.5.0"
+  },
+  "engines": {
+    "node": ">=18.0.0"
+  }
+}
